2006-03-20  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::CreateGUI):   Left-justify titles and
	                                      subtitles in the Users
	                                      Online list.

	* tkchat.tcl (::tkchat::OnTextPopup): Use tk_popup instead of the
	(::tkchat::OnNamePopup):              menu's popup subcommand to fix
	                                      unposting on X.

	* tkchat.tcl: (::tkchat::Smile):      New coffe emoticon.

	* tkchat.tcl: (::tkchat::updateOnlineNames): Don't continue the
	                                      active area of clickable
	                                      nick names to the end of the
	                                      line.

2006-03-20  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::addTraffic): Add IRC and WebChat nicks to the
	(::tkchat::nickComplete):            OnlineUser list. Rename procedure
	(::tkchat::CreateGUI):               '::tkchat::updateJabberNames' to
	(::tkchat::DoVis):                   '::tkchat::updateOnlineNames' as
	(::tkchat::ChangeColors):            it now does more than just Jabber
	(::tkchat::Init):                    names. New procedure
	(::tkjabber::cleanup):               '::tkchat::OnNetworkToggleShow'.
	(::tkjabber::RosterCB):
	(::tkjabber::MsgCB):
	(::tkjabber::parseMsg):
	(::tkjabber::send_memo):
	(::tkchat::updateJabberNames):
	(::tkchat::updateOnlineNames):
	(::tkchat::OnNetworkToggleShow):
	(::tkchat::OnNamePopup):
	(::tkjabber::setNick):
	(::tkJabber::transferNick):

	* tkchat.tcl (::tkchat::addTraffic): Parse user entered messages
	(ie. for /away) for emoticons.

	* tkchat.tcl (::tkchat::checkNick): Only calculate width for new nicks.
	(::tkchat::checkNickWidth):         New procedures
	(::tkchat::OpenChatLog):            '::tkchat::checkNickWidth' and
	(::tkchat::Debug):                  '::tkchat::InitOffset'.
	(::tkchat::Init):
	(::tkchat::InitOffset):
	(::tkchat::GetDefaultOptions):
